# The-bitcoin-Phantom

./: .appveyor.yml  .gitignore  .travis.yml  CONTRIBUTING.md  COPYING  Makefile.am  README.md  SECURITY.md  autogen.sh  configure.ac
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.tx/: config
build_msvc/: .gitignore  README.md  bitphantom.sln  bitphantom_config.h  libsecp256k1_config.h  msvc-autogen.py
ci/: test_run_all.sh
contrib/: README.md  bitphantom-cli.bash-completion  bitphantom-qt.pro  bitphantom-tx.bash-completion  bitphantomd.bash-completion  gitian-build.py  install_db4.sh
depends/: Makefile  README.md  description.md  packages.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  benchmarking.md  bips.md  bitphantom-conf.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  gitian-building.md  init.md  productivity.md  psbt.md  rapidcheck.md  reduce-memory.md  reduce-traffic.md  release-notes-15437.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  zmq.md
doc/man/: Makefile.am  bitphantom-cli.1  bitphantom-qt.1  bitphantom-tx.1  bitphantom-wallet.1  bitphantomd.1
share/: genbuild.sh  setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.leveldb.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  (+139 more)
(+924 files in other folders)
