dist_man1_MANS=

if BUILD_bitphantomD
  dist_man1_MANS+=bitphantomd.1
endif

if ENABLE_QT
  dist_man1_MANS+=bitphantom-qt.1
endif

if BUILD_bitphantom_CLI
  dist_man1_MANS+=bitphantom-cli.1
endif

if BUILD_bitphantom_TX
  dist_man1_MANS+=bitphantom-tx.1
endif

if ENABLE_WALLET
if BUILD_bitphantom_WALLET
  dist_man1_MANS+=bitphantom-wallet.1
endif
endif
